crates/nash-solve/tests/snapshots/inference__branch_mismatch.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (pick)\n\npick b = if b then 1 else \"two\"\n"
---
[
    BadExpr(
        Region {
            start: Position {
                line: 3,
                column: 27,
            },
            end: Position {
                line: 3,
                column: 32,
            },
        },
        String,
        Type {
            home: ModuleName {
                package: None,
                name: "String",
            },
            name: "String",
            args: [],
        },
        FromContext(
            Region {
                start: Position {
                    line: 3,
                    column: 10,
                },
                end: Position {
                    line: 3,
                    column: 32,
                },
            },
            IfBranch(
                1,
            ),
            FlexSuper(
                Number,
                "number",
            ),
        ),
    ),
]
