crates/nash-solve/tests/snapshots/inference__function_application_pins_types.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (id, main)\n\nid x = x\n\nmain = id 42\n"
---
id : forall a. a -> a
main : forall number. number
