crates/nash-solve/tests/snapshots/inference__int_literal.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (main)\n\nmain = 42\n"
---
main : forall number. number
