crates/nash-solve/tests/snapshots/inference__let_bound_function.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (main)\n\nmain =\n    let\n        f x = x\n    in\n    f 42\n"
---
main : forall number. number
