crates/nash-solve/tests/snapshots/inference__let_polymorphism.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (main)\n\nmain =\n    let\n        id x = x\n    in\n    ( id 1, id \"one\" )\n"
---
main : forall number. ( number, String )
